--- a/Part.2.D.3-lambda.ipynb
+++ b/Part.2.D.3-lambda.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "在 Python 中，我们可以给一个函数取个**化名**（alias）。\n",
     "\n",
-    "以下的代码，我们先是定义个了一个名为 `_is_leap` 的函数，而后为它另取了一个化名："
+    "以下的代码，我们先是定义了一个名为 `_is_leap` 的函数，而后为它另取了一个化名："
    ]
   },
   {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -541,16 +541,76 @@
        "[(4, 'four'), (1, 'one'), (3, 'three'), (2, 'two')]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pairs = [(1, 'one'), (2, 'two'), (3, 'three'), (4, 'four')]\n",
-    "pairs.sort(key=lambda p: p[1])\n",
+    "pairs.sort(key=lambda p: p[1], reverse=False) #按照首字母排序，还有点晕？？\n",
     "pairs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function <lambda> at 0x00000000058567B8>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 'two'), (3, 'three'), (1, 'one'), (4, 'four')]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_list= [(1, 'one'), (2, 'two'), (3, 'three'), (4, 'four')]\n",
+    "a_list.sort(key=lambda p: p[1], reverse=True)\n",
+    "b=lambda p: p[1]\n",
+    "print(b)\n",
+    "a_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'one'), (2, 'two'), (3, 'three'), (4, 'four')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_list= [(1, 'one'), (2, 'two'), (3, 'three'), (4, 'four')]\n",
+    "a_list.sort(key=None, reverse=False)\n",
+    "a_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -569,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
