--- a/Part.1.E.1.entrance.ipynb
+++ b/Part.1.E.1.entrance.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,17 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +150,7 @@
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "# 请暂时忽略以上两行……\n",
     "\n",
-    "1 == 2\n",
+    "1 == 1\n",
     "1 != 2"
    ]
   },
@@ -270,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "693 is odd.\n"
+      "892 is even.\n"
      ]
     }
    ],
@@ -534,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +553,7 @@
        "3.1415926"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +611,13 @@
       "101\n",
       "103\n",
       "107\n",
-      "109\n"
+      "109\n",
+      "113\n",
+      "127\n",
+      "131\n",
+      "137\n",
+      "139\n",
+      "149\n"
      ]
     }
    ],
@@ -617,7 +633,7 @@
     "    else:\n",
     "        return True\n",
     "\n",
-    "for i in range(80, 110):\n",
+    "for i in range(80, 150):\n",
     "    if is_prime(i):          # 调用 is_prime() 函数，\n",
     "        print(i)            # 如果返回值为 True，则向屏幕输出 i"
    ]
@@ -854,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   },
   "toc-autonumbering": true,
   "toc-showmarkdowntxt": false
