--- a/Part.1.E.4.functions.ipynb
+++ b/Part.1.E.4.functions.ipynb
@@ -92,19 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, jack mike ... and all you guys!\n"
+      "Hello, jack mike ... and all you guys!\n",
+      "i love you\n"
      ]
     }
    ],
    "source": [
-    "print('Hello,', 'jack', 'mike', '...', 'and all you guys!')"
+    "print('Hello,', 'jack', 'mike', '...', 'and all you guys!')\n",
+    "print('i love you')"
    ]
   },
   {
@@ -248,20 +250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
+      "2\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "print(print(1))"
+    "print(print(2))"
    ]
   },
   {
@@ -275,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 关键字参数"
+    "## 参数"
    ]
   },
   {
@@ -671,6 +673,25 @@
     "\n",
     "<a href='#fn1b'><small>↑Back to Content↑</small>\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ab\n",
+      "a b\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a', 'b', sep='')\n",
+    "print('a', 'b')"
+   ]
   }
  ],
  "metadata": {
@@ -689,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   },
   "toc-autonumbering": true
  },
