--- a/Part.1.E.5.strings.ipynb
+++ b/Part.1.E.5.strings.ipynb
@@ -71,16 +71,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'z'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "27653"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "data": {
       "text/plain": [
        "'挊'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +119,7 @@
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
-    "ord('a')\n",
+    "ord('A')\n",
     "chr(122)\n",
     "\n",
     "ord('氅')  # 完了，汉字也有你不认识的吧？\n",
@@ -257,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +296,7 @@
        "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -276,7 +306,7 @@
        "3.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -286,7 +316,7 @@
        "'3.1415926'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,16 +381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Please tell me your age:  19\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -580,22 +603,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hey! You!'"
+       "'Hey!You!'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'Hey!' + ' ' + 'You!' # 使用操作符 +"
+    "'Hey!' +  'You!' # 使用操作符 +"
    ]
   },
   {
@@ -878,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +910,7 @@
        "10"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -897,7 +920,7 @@
        "9"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -907,7 +930,7 @@
        "13"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -917,16 +940,9 @@
        "'A'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请照抄一遍这个数字 3.14:  3.14\n"
-     ]
     },
     {
      "data": {
@@ -934,27 +950,27 @@
        "3"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "28.26"
+       "27.900000000000002"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "4"
+       "3"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -962,7 +978,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.143.143.14\n"
+      "3.13.13.1\n"
      ]
     }
    ],
@@ -1346,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1371,7 @@
        "4"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1365,7 +1381,7 @@
        "3"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1375,7 +1391,7 @@
        "1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1529,7 +1545,7 @@
     "\n",
     "print('Example of str.rfind():')\n",
     "# str.rfind(sub[, start[, end]])\n",
-    "# brfind() 返回最后 sub 出现的那次的位置；find()是最早的那次\n",
+    "# rfind() 返回最后 sub 出现的那次的位置；find()是最早的那次\n",
     "s.lower().rfind('mpl')\n",
     "s.lower().rfind('mpl', 10)\n",
     "s.lower().rfind('mpl', 10, 20) # 没有找到就返回 -1，-1 的布尔值是 False\n",
@@ -1677,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1686,17 +1702,17 @@
        "\"Special cases   aren't  special enough  to      break   the     rules.\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "\"Special cases aren't  special enough  to  break the rules.\""
+       "\"Special cases aren't special enough to break the rules.\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1724,7 @@
     "# str.expandtabs(tabsize=8)\n",
     "s = \"Special\\tcases\\taren't\\tspecial\\tenough\\tto\\tbreak\\tthe\\trules.\"\n",
     "s.expandtabs()\n",
-    "s.expandtabs(2)"
+    "s.expandtabs(1)"
    ]
   },
   {
@@ -2299,29 +2315,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "001.mp3\n",
-      "002.mp3\n",
-      "003.mp3\n",
-      "004.mp3\n",
-      "005.mp3\n",
-      "006.mp3\n",
-      "007.mp3\n",
-      "008.mp3\n",
-      "009.mp3\n",
-      "010.mp3\n"
+      "0001.mp3\n",
+      "0002.mp3\n",
+      "0003.mp3\n",
+      "0004.mp3\n",
+      "0005.mp3\n",
+      "0006.mp3\n",
+      "0007.mp3\n",
+      "0008.mp3\n",
+      "0009.mp3\n",
+      "0010.mp3\n"
      ]
     }
    ],
    "source": [
     "for i in range(1, 11):\n",
-    "    filename = str(i).zfill(3) + '.mp3'\n",
+    "    filename = str(i).zfill(4) + '.mp3'\n",
     "    print(filename)"
    ]
   },
@@ -2492,16 +2508,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'25 is John years old.'"
+       "'John is 18 or 25 years old.'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2509,7 +2525,8 @@
    "source": [
     "name = 'John'\n",
     "age = 25\n",
-    "'{1} is {0} years old.'.format(name, age)"
+    "ages = 18\n",
+    "'{0} is {2} or {1} years old.'.format(name, age, ages)"
    ]
   },
   {
@@ -2535,7 +2552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2544,12 +2561,11 @@
      "text": [
       "'1234567890'.isalnum(): True\n",
       "'abcdefghij'.isalpha(): True\n",
-      "'山巅一寺一壶酒'.isascii(): False\n",
       "'0.123456789'.isdecimal(): False\n",
       "'0.123456789'.isdigit(): False\n",
       "'0.123456789'.isnumeric(): False\n",
       "'Continue'.islower(): False\n",
-      "'Simple Is Better Than Complex'.istitle(): False\n",
+      "'Simple Is Better Than Complex'.issupper(): False\n",
       "'Simple Is Better Than Complex'.istitle(): True\n",
       "'\t'.isnumeric(): False\n",
       "'\t'.isnumeric(): True\n",
@@ -2567,8 +2583,8 @@
     "      'abcdefghij'.isalpha()) \n",
     "\n",
     "# str.isascii()\n",
-    "print(\"'山巅一寺一壶酒'.isascii():\", \\\n",
-    "      '山巅一寺一壶酒'.isascii()) \n",
+    "# print(\"'山巅一寺一壶酒'.isascii():\", \\\n",
+    "      #'山巅一寺一壶酒'.isascii()) \n",
     "\n",
     "# str.isdecimal()\n",
     "print(\"'0.123456789'.isdecimal():\", \\\n",
@@ -2587,7 +2603,7 @@
     "      'Continue'.islower())\n",
     "\n",
     "# str.isupper()\n",
-    "print(\"'Simple Is Better Than Complex'.istitle():\", \\\n",
+    "print(\"'Simple Is Better Than Complex'.issupper():\", \\\n",
     "      'Simple Is Better Than Complex'.isupper())\n",
     "\n",
     "# str.istitle()\n",
@@ -2629,7 +2645,7 @@
     "\n",
     "![](images/string-concepts.png)\n",
     "\n",
-    "“记住”的方法并不是马上就只盯着表格看…… 正确方法是反复阅读这一章内容中的代码，并逐一运行，查看输出结果；还要顺手改改看看，多多体会。多次之后，再看着表格回忆知识点，直到牢记位置。"
+    "“记住”的方法并不是马上就只盯着表格看…… 正确方法是反复阅读这一章内容中的代码，并逐一运行，查看输出结果；还要顺手改改看看，多多体会。多次之后，再看着表格回忆知识点，直到牢记为止。"
    ]
   },
   {
@@ -2707,7 +2723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   },
   "toc-autonumbering": true
  },
