--- a/Part.2.D.1-args.ipynb
+++ b/Part.2.D.1-args.ipynb
@@ -355,14 +355,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "144 233 377 610 987 1597 2584 4181 6765 "
+      "13 21 34 55 89 144 233 377 610 987 "
      ]
     }
    ],
@@ -374,7 +374,7 @@
     "            print(a, end=' ')\n",
     "        a, b = b, a + b\n",
     "        \n",
-    "fib_between(100, 10000)"
+    "fib_between(10, 1000)"
    ]
   },
   {
@@ -429,14 +429,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "2\n",
+      "1\n"
      ]
     }
    ],
@@ -447,6 +448,7 @@
     "\n",
     "n = 1\n",
     "print(increase_one(n))\n",
+    "print(n)\n",
     "# print(n)"
    ]
   },
@@ -514,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +525,7 @@
        "(1, [1, 2, 3])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,6 +541,13 @@
     "be_careful(a, b)\n",
     "a, b"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -557,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   },
   "toc-autonumbering": true
  },
