--- a/Part.2.D.4-recursion.ipynb
+++ b/Part.2.D.4-recursion.ipynb
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "120\n"
+      "24\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
     "    else:\n",
     "        return n * f(n-1)\n",
     "    \n",
-    "print(f(5))"
+    "print(f(4))"
    ]
   },
   {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -211,13 +211,9 @@
       "dead: False kicked: False\n",
       "dead: False kicked: False\n",
       "dead: False kicked: False\n",
-      "dead: False kicked: False\n",
-      "dead: False kicked: False\n",
-      "dead: False kicked: False\n",
-      "dead: False kicked: False\n",
-      "dead: True kicked: True\n",
-      "I slept 8 days, and was dead to wake up...\n",
-      "The in_dream() function returns: 8\n"
+      "dead: True kicked: False\n",
+      "I slept 4 days, and was dead to wake up...\n",
+      "The in_dream() function returns: 4\n"
      ]
     }
    ],
@@ -631,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
