--- a/Part.2.D.6-modules.ipynb
+++ b/Part.2.D.6-modules.ipynb
@@ -147,7 +147,29 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\Anaconda3\\\\python36.zip',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\Anaconda3\\\\DLLs',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\Anaconda3\\\\lib',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\Anaconda3',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\Anaconda3\\\\lib\\\\site-packages',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\Anaconda3\\\\lib\\\\site-packages\\\\Babel-2.5.0-py3.6.egg',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\Anaconda3\\\\lib\\\\site-packages\\\\win32',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\Anaconda3\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\Anaconda3\\\\lib\\\\site-packages\\\\Pythonwin',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\Anaconda3\\\\lib\\\\site-packages\\\\IPython\\\\extensions',\n",
+       " 'C:\\\\Users\\\\Administrator\\\\.ipython']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path"
@@ -693,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
